--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.0",
-    "googleapis": "^39.2.0"
+    "googleapis": "^39.2.0",
+    "open": "^8.2.1"
   }
 }
